TSS-241 : Product Configuration Enhancements- update action & fixed  testing